# ChangeLog for sci-misc/openfst
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*openfst-1.4.1 (02 Jan 2015)

  02 Jan 2015; Flammie Pirinen <flammie@gentoo.org> +metadata.xml,
  +openfst-1.4.1.ebuild:
  initial add of openfst